--- a/budget tracker.html
+++ b/budget tracker.html
@@ -57,9 +57,7 @@
             <input
               type="number"
               name="amount"
-              value="0"
-              min="0.01"
-              step="0.01"
+                placeholder="1000"
               required
             />
           </div>
