--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                   thrive in the digital age. With a commitment to excellence and a passion for
                    technology, TechWorld is your trusted partner for all things web development
                     and tech education.</span></p>
-        <p class="w3-round-xxlarge w3-border-bottom w3-border-blue " 
-        style="padding: 15px; width: 20%" onclick="myFunction()" id="myBtn" >Read more...</p></div>
+        <p class=" w3-border-bottom w3-border-blue " 
+        style="padding: 15px; width: 20%" onclick="myFunction()" id="myBtn" >Read more..</p></div>
 
 
 
